refactor: simplify command shell